main.tf
provider "aws"{
    profile = "terraform"
    region = "ap-northeast-1"
}

resource "aws_instance" "hello-world"{
    ami = "ami-070e0d4707168fc07"
    instance_type = "t2.micro"
}
