security_group.tf
# security group

# web server security group
resource "aws_security_group" "web_sg" {
    name = "${var.project}-${var.environment}-web-sg"
    description = "web front role security froup"
    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project}-${var.environment}-web-sg"
        project = var.project
        Env = var.environment
    }
}

resource "aws_security_group_rule" "web_in_http" {
    security_group_id = aws_security_group.web_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 80
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "web_in_https" {
    security_group_id = aws_security_group.web_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 443
    to_port = 443
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "web_out_tcp3000" {
    security_group_id = aws_security_group.web_sg.id
    type = "egress"
    protocol = "tcp"
    from_port = 3000
    to_port = 3000
    cidr_blocks = ["0.0.0.0/0"]
    source_security_group_id = aws_security_group.app_sg.id
}

# app server security group
resource "aws_security_group" "app_sg" {
    name = "${var.project}-${var.environment}-app-sg"
    description = "app server role security froup"
    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project}-${var.environment}-app-sg"
        project = var.project
        Env = var.environment
    }
}

# opmng security group
resource "aws_security_group" "opmng_sg" {
    name = "${var.project}-${var.environment}-opmng-sg"
    description = "oppmng role security froup"
    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project}-${var.environment}-opmng-sg"
        project = var.project
        Env = var.environment
    }
}

resource "aws_security_group_rule" "opmng_in_ssh" {
    security_group_id = aws_security_group.opmng_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 22
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "opmng_in_tcp3000" {
    security_group_id = aws_security_group.opmng_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 3000
    to_port = 3000
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "opmng_out_ssh" {
    security_group_id = aws_security_group.opmng_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 80
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "opmng_out_tcp3000" {
    security_group_id = aws_security_group.opmng_sg.id
    type = "egress"
    protocol = "tcp"
    from_port = 443
    to_port = 443
    cidr_blocks = ["0.0.0.0/0"]
}

# db server security group
resource "aws_security_group" "db_sg" {
    name = "${var.project}-${var.environment}-db-sg"
    description = "db server role security froup"
    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project}-${var.environment}-db-sg"
        project = var.project
        Env = var.environment
    }
}

resource "aws_security_group_rule" "opmng_in_tcp3306" {
    security_group_id = aws_security_group.db_sg.id
    type = "ingress"
    protocol = "tcp"
    from_port = 3306
    to_port = 3306
    cidr_blocks = ["0.0.0.0/0"]
    source_security_group_id = aws_security_group.app_sg.id
}
